# Modern-Algebra

./: Doxyfile.in  README.md
docs/: _hello_8cpp.html  _hello_8cpp__incl.map  _hello_8cpp__incl.md5  _hello_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.md5  main_8cpp_source.html  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js
include/shared/: Graph.cc  Graph.hpp  Readme.md  Tablet.hpp
src/: CMakeLists.txt  main.cpp
